kustomize/overlays/prod/syncwatch/httpRoute.syncwatch.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncwatch
  namespace: syncwatch
spec:
  hostnames:
  - syncwatch.example.com
